[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/Naves/BarraSalud.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=3]
[ext_resource path="res://Juego/Sonidos/Audio/PlayerImpacto.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.8, 0.890196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0392157, 0.00392157, 0.00392157, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.945098, 0.384314, 0.133333, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.109804, 0.0313726, 0.0313726, 1 )

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 3 )

[node name="SpritePlayer" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.74902, 0.886275, 1 )

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
modulate = Color( 0.203922, 0.164706, 0.113725, 1 )
position = Vector2( -6, 2 )

[node name="Canion" parent="." instance=ExtResource( 2 )]
position = Vector2( 27, 0 )

[node name="ImpactoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BarraSalud" type="ProgressBar" parent="."]
margin_left = -80.0
margin_top = 56.0
margin_right = 32.0
margin_bottom = 70.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 80.0
rounded = true
percent_visible = false
script = ExtResource( 1 )

[node name="TweenVisibilidad" type="Tween" parent="BarraSalud"]

[connection signal="tween_all_completed" from="BarraSalud/TweenVisibilidad" to="BarraSalud" method="_on_TweenVisibilidad_tween_all_completed"]
